--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -14,3 +14,41 @@ block pageHeader
 	)
 
 block pageMain
+	section.section
+		.grid
+			.grid__row
+				.grid__col
+					.services
+						h2.page__title.page__title_1 Консультационные услуги
+						p.page__p Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
+						+services-tiles(
+							[
+								{
+									class: 'audit',
+									title: 'Аудит хозяйств',
+								},
+								{
+									class: 'diet',
+									title: 'Расчет рациона',
+								},
+								{
+									class: 'lab',
+									title: 'Лабораторные исследования',
+								}
+							]
+						)
+						p.page__p.page__p_secondary Портфель продукции включает в себя заменители молока, концентраты, премиксы и кормовые добавки для КРС, свиноводства и птицеводства. Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
+	section.section
+		.grid
+			.grid__row
+				.grid__col
+					.vacancy-list
+						h2.page__title.page__title_1 Вакансии
+						p.page__p Люди — наш основной ресурс. От личных качеств наших сотрудников, их профессионализма и способности к сотрудничеству напрямую зависит качество услуг, которые получает клиент. Мы заинтересованы в привлечении активных, талантливых, целеустремленных, готовых развиваться и ответственных сотрудников.
+						.vacancy-list__title Список вакансий
+						+vacancy-list-tiles(
+							[
+								{},
+								{}
+							]
+						)
