--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -10,8 +10,11 @@ include ../blocks/footer-unit/footer-unit.pug
 include ../blocks/header/header.pug
 include ../blocks/nav/nav.pug
 include ../blocks/phone-drop/phone-drop.pug
+include ../blocks/points/points.pug
 include ../blocks/popup/popup.pug
 include ../blocks/prod-grid/prod-grid.pug
 include ../blocks/prod-tiles/prod-tiles.pug
+include ../blocks/services-tiles/services-tiles.pug
 include ../blocks/subnav/subnav.pug
+include ../blocks/vacancy-list-tiles/vacancy-list-tiles.pug
 include ../blocks/vacancy-tiles/vacancy-tiles.pug
