--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -31,19 +31,25 @@
 @import "dev/blocks/nav/nav.scss";
 @import "dev/blocks/page/page.scss";
 @import "dev/blocks/phone-drop/phone-drop.scss";
+@import "dev/blocks/points/points.scss";
 @import "dev/blocks/popup/popup.scss";
 @import "dev/blocks/prod/prod.scss";
 @import "dev/blocks/prod-grid/prod-grid.scss";
 @import "dev/blocks/prod-tabs/prod-tabs.scss";
 @import "dev/blocks/prod-tabs-content/prod-tabs-content.scss";
 @import "dev/blocks/prod-tiles/prod-tiles.scss";
+@import "dev/blocks/section/section.scss";
 @import "dev/blocks/select/select.scss";
+@import "dev/blocks/services-tiles/services-tiles.scss";
 @import "dev/blocks/sidenav/sidenav.scss";
 @import "dev/blocks/subnav/subnav.scss";
 @import "dev/blocks/textarea/textarea.scss";
 @import "dev/blocks/vacancy/vacancy.scss";
 @import "dev/blocks/vacancy-apply/vacancy-apply.scss";
+@import "dev/blocks/vacancy-list/vacancy-list.scss";
+@import "dev/blocks/vacancy-list-tiles/vacancy-list-tiles.scss";
 @import "dev/blocks/vacancy-tiles/vacancy-tiles.scss";
+@import "dev/blocks/welcome/welcome.scss";
 
 /*!*
  * ВНИМАНИЕ! Этот файл генерируется автоматически.
