--- a/dev/blocks/vacancy-list-tiles/vacancy-list-tiles.pug
+++ b/dev/blocks/vacancy-list-tiles/vacancy-list-tiles.pug
@@ -11,4 +11,4 @@ mixin vacancy-list-tiles(items)
 						.vacancy-list-tiles__day 2 июня
 				.vacancy-list-tiles__icon
 					svg.svg
-						use(xlink:href='img/svgSprite.svg#icon__arrow')
+						use(xlink:href='img/svgSprite.svg#icon__arrow_right')
