--- a/dev/blocks/welcome/welcome.scss
+++ b/dev/blocks/welcome/welcome.scss
@@ -5,7 +5,7 @@
 .welcome {
 	margin: 0;
 	overflow: hidden;
-	padding: 80px 0 0;
+	padding: 80px 0 40px;
 	@media (min-width: $screen-md) {
 		height: 876px;
 		margin: -64px 0 -264px;
