--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -17,6 +17,36 @@ block pageMain
 	section.section
 		.grid
 			.grid__row
+				.grid__col.grid__col_xl_4
+					.slider-side.slider-side_left
+						h2.page__title.page__title_1 О нас
+						.slider-side__subtitle Ведущий производитель кормов и кормовых решений
+						p.slider-side__p Ключевая компетенция компании — эффективные технологии кормления, которые помогают хозяйствам становиться прибыльными. Портфель продукции включает в себя заменители молока, концентраты, премиксы и кормовые добавки для КРС, свиноводства и птицеводства. Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
+				.grid__col.grid__col_xl_8
+					.slider-wrap.slider-wrap_about
+						.slider.slider_about
+							.slider__slide
+								img(src='/assets/img__slide_02.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_01.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_03.jpg', alt='')
+						.slider.slider_about_mini
+							.slider__slide
+								.slider__bubble
+									.slider__bubble-title Высокое качество производимой продукции
+									.slider__bubble-descr Ключевая компетенция компании — эффективные технологии кормления, которые помогают хозяйствам становиться прибыльными.
+							.slider__slide
+								.slider__bubble
+									.slider__bubble-title Заголовок 1
+									.slider__bubble-descr Описание 1
+							.slider__slide
+								.slider__bubble
+									.slider__bubble-title Заголовок 2
+									.slider__bubble-descr Описание 2
+	section.section
+		.grid
+			.grid__row
 				.grid__col
 					.services
 						h2.page__title.page__title_1 Консультационные услуги
@@ -38,6 +68,66 @@ block pageMain
 							]
 						)
 						p.page__p.page__p_secondary Портфель продукции включает в себя заменители молока, концентраты, премиксы и кормовые добавки для КРС, свиноводства и птицеводства. Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
+	section.section
+		.grid
+			.grid__row
+				.grid__col.grid__col_lg_7
+					.slider-wrap
+						.slider.slider_production
+							.slider__slide
+								img(src='/assets/img__slide_01.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_02.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_03.jpg', alt='')
+						.slider.slider_production_mini
+							.slider__slide
+								.slider__info
+									.slider__title Завод по производству премиксов
+									.slider__descr Один из самых современных производственных комплексов России.
+							.slider__slide
+								.slider__info
+									.slider__title Заголовок 1
+									.slider__descr Описание 1
+							.slider__slide
+								.slider__info
+									.slider__title Заголовок 2
+									.slider__descr Описание 2
+				.grid__col.grid__col_lg_5
+					.slider-side
+						h2.page__title.page__title_1 Производство
+						p.slider-side__p Высочайшие стандарты и строгий контроль качества на каждом этапе производства, передовой мировой опыт и собственные разработки позволяют «АгроСтар» выпускать лучшие на рынке корма и заменители молока для сельскохозяйственных животных
+	section.section
+		.grid
+			.grid__row
+				.grid__col
+					h2.page__title.page__title_1 Лаборатория
+					p.page__p На территории производственного комплекса в г. Гагарине функционирует собственная аккредитованная испытательная лаборатория «Мустанг Технологии Кормления».
+					.slider-wrap.slider-wrap_lab
+						.slider.slider_lab
+							.slider__slide
+								img(src='/assets/img__slide_04.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_05.jpg', alt='')
+						.slider.slider_lab_mini
+							.slider__slide
+								.slider__lab
+									svg.slider__lab-icon.svg
+										use(xlink:href='img/svgSprite.svg#icon__comb')
+									.slider__lab-inner
+										.slider__lab-title Лаборатория оснащена современным испытательным оборудованием ведущих мировых производителей
+										ul.slider__lab-list
+											li - высокоэффективным жидкостным хроматографом фирмы GILSON
+											li - анализатором белка Kjeltec фирмы FOSS
+							.slider__slide
+								.slider__lab
+									svg.slider__lab-icon.svg
+										use(xlink:href='img/svgSprite.svg#icon__comb')
+									.slider__lab-inner
+										.slider__lab-title Заголовок
+										ul.slider__lab-list
+											li - пункт 1
+											li - пункт 2
 	section.section
 		.grid
 			.grid__row
