--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -75,3 +75,21 @@ block pageMain
 							{icon: '12',title: '12 лет на рынке'}
 						]
 					)
+	section.section
+		.grid
+			.grid__row
+				.grid__col.grid__col_lg_7
+					.slider-wrap
+						.slider.slider_company
+							.slider__slide
+								img(src='/assets/img__slide_01.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_02.jpg', alt='')
+							.slider__slide
+								img(src='/assets/img__slide_03.jpg', alt='')
+				.grid__col.grid__col_lg_5
+					.slider-side
+						h2.page__title.page__title_1 О компании
+						p.slider-side__p Компания АгроСтар производитель и поставщик высококачественных продуктов и кормовых добавок для молочного животноводства. Нашей приоритетной задачей является внедрение передовых технологий кормления повышающих экономическую эффективность молочного хозяйства.
+						a.slider-side__button.button(href='/about.html') Подробнее
+
