--- a/dev/blocks/section/section.scss
+++ b/dev/blocks/section/section.scss
@@ -3,5 +3,10 @@
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
 .section {
-	padding: 76px 0 0;
+	& + & {
+		padding: 48px 0 0;
+		@media (min-width: $screen-md) {
+			padding: 92px 0 0;
+		}
+	}
 }
