--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -41,6 +41,9 @@
 @import "dev/blocks/select/select.scss";
 @import "dev/blocks/services-tiles/services-tiles.scss";
 @import "dev/blocks/sidenav/sidenav.scss";
+@import "dev/blocks/slider/slider.scss";
+@import "dev/blocks/slider-side/slider-side.scss";
+@import "dev/blocks/slider-wrap/slider-wrap.scss";
 @import "dev/blocks/subnav/subnav.scss";
 @import "dev/blocks/textarea/textarea.scss";
 @import "dev/blocks/vacancy/vacancy.scss";
