--- a/dev/blocks/prod-grid/prod-grid.pug
+++ b/dev/blocks/prod-grid/prod-grid.pug
@@ -8,4 +8,5 @@ mixin prod-grid(items)
 					img(src='/assets/product-good.png' alt='')
 				.prod-grid__title!= item.title
 				.prod-grid__descr!= item.descr
-				.prod-grid__link Подробнее ⯈
+				.prod-grid__link Подробнее
+					span
