--- a/dev/blocks/prod-tiles/prod-tiles.pug
+++ b/dev/blocks/prod-tiles/prod-tiles.pug
@@ -7,4 +7,5 @@ mixin prod-tiles(items)
 				.prod-tiles__title!= item.title
 				if item.isDescr === true
 					.prod-tiles__descr!= item.descr
-				.prod-tiles__link Подробнее ⯈
+				.prod-tiles__link Подробнее
+					span
