--- a/dev/blocks/services-tiles/services-tiles.pug
+++ b/dev/blocks/services-tiles/services-tiles.pug
@@ -5,4 +5,5 @@ mixin services-tiles(items)
 		each item, index in items
 			a.services-tiles__item(class='services-tiles__item_' + item.class, href='#')
 				.services-tiles__title!= item.title
-				.services-tiles__link Подробнее ⯈
+				.services-tiles__link Подробнее
+					span
