--- a/dev/blocks/prod-grid/prod-grid.scss
+++ b/dev/blocks/prod-grid/prod-grid.scss
@@ -53,5 +53,21 @@
 		@include prod-grid-link;
 		margin-top: auto;
 		width: 100%;
+		span {
+			display: inline-block;
+			height: 8px;
+			margin: 0 0 0 8px;
+			width: 8px;
+			&::before {
+				border-color: transparent transparent transparent #1e3d68;
+				border-style: solid;
+				border-width: 5px 0 5px 8px;
+				content: '';
+				display: block;
+				height: 0;
+				transform: translateY(-1px);
+				width: 0;
+			}
+		}
 	}
 }
