--- a/dev/blocks/button/button.scss
+++ b/dev/blocks/button/button.scss
@@ -4,6 +4,7 @@
 
 .button {
 	background: #1e3d68;
+	border: none;
 	border-radius: 100px;
 	box-shadow: 0 13px 32px rgba(0,53,105,.31);
 	color: #fff;
