--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -6,7 +6,7 @@ block pageHeader
 		true,
 		[
 			{active: true, link: 'О нас', url: '#'},
-			{active: false, link: 'О сопроводительных услугах', url: '#'},
+			{active: false, link: 'Консультационные услуги', url: '#'},
 			{active: false, link: 'О производстве', url: '#'},
 			{active: false, link: 'О лаборатории', url: '#'},
 			{active: false, link: 'Вакансии', url: '/vacancy.html'}
@@ -67,7 +67,7 @@ block pageMain
 								}
 							]
 						)
-						p.page__p.page__p_secondary Портфель продукции включает в себя заменители молока, концентраты, премиксы и кормовые добавки для КРС, свиноводства и птицеводства. Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
+						//-p.page__p.page__p_secondary Портфель продукции включает в себя заменители молока, концентраты, премиксы и кормовые добавки для КРС, свиноводства и птицеводства. Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
 	section.section
 		.grid
 			.grid__row
