--- a/dev/pages/vacancy.pug
+++ b/dev/pages/vacancy.pug
@@ -6,7 +6,7 @@ block pageHeader
 		true,
 		[
 			{active: false, link: 'О нас', url: 'about.html'},
-			{active: false, link: 'О сопроводительных услугах', url: '#'},
+			{active: false, link: 'Консультационные услуги', url: '#'},
 			{active: false, link: 'О производстве', url: '#'},
 			{active: false, link: 'О лаборатории', url: '#'},
 			{active: true, link: 'Вакансии', url: '#'}
@@ -43,11 +43,11 @@ block pageMain
 						li предоставление служебного автомобиля
 						li предоставление ПК
 					h3 Обязанности
-						ul
-							li работа с менеджером
-							li ведение, консультирование хозяйств
-							li проведение аудита хозяйств
-							li оценка кормовой базы хозяйств, расчет рационов, в т. ч. их экономической эффективности
+					ul
+						li работа с менеджером
+						li ведение, консультирование хозяйств
+						li проведение аудита хозяйств
+						li оценка кормовой базы хозяйств, расчет рационов, в т. ч. их экономической эффективности
 			.grid__col.grid__col_lg_5
 				.vacancy-apply
 					.vacancy-apply__inner
