--- a/dev/blocks/field/field.pug
+++ b/dev/blocks/field/field.pug
@@ -11,7 +11,7 @@ mixin field_phone(label, placeholder, value, info, mod)
 	.field(class= mod)
 		label.field__inner
 			.field__label!= label
-			input.field__input.input(required, type='tel', id='phone-mask', placeholder= placeholder, pattern='\\+7[\\(]{0,1}9[0-9]{2}[\\)]{0,1}\\d{3}[-]{0,1}\\d{2}[-]{0,1}\\d{2}', value= value)
+			input.field__input.input(required, type='tel', id='phone-mask', placeholder= placeholder, value= value)
 		.field__info!= info
 
 mixin field_mail(label, placeholder, value, info, mod)
