--- a/dev/blocks/footer-contacts/footer-contacts.scss
+++ b/dev/blocks/footer-contacts/footer-contacts.scss
@@ -12,7 +12,7 @@
 		}
 	}
 	&__title {
-		color: #bfcbd1;
+		color: #778389;
 		@include footer-subtitle;
 		margin-bottom: 9px;
 		user-select: none;
