~ remove navigation ~ readme

--- a/dev/pug/layout_default.pug
+++ b/dev/pug/layout_default.pug
@@ -30,13 +30,13 @@ html(class='no-js', lang='ru-RU')
 
 		block head
 			link(rel="stylesheet" href="/css/style.css")
-			// удалить:
-			link(rel="stylesheet" href="/css/trash.css")
+			//-удалить:
+			//-link(rel="stylesheet" href="/css/trash.css")
 
 	body
 		noscript У вас отключен JavaScript. Это пугает.
 
-		include layout__part_navigation.pug
+		//-include layout__part_navigation.pug
 		.page
 			.page__nav
 				include layout__part_nav.pug
@@ -52,7 +52,7 @@ html(class='no-js', lang='ru-RU')
 	block templates
 
 	script(src='/js/main.js')
-	//удалить
-	script(src="/js/service.js")
+	//-удалить
+	//-script(src="/js/service.js")
 
 	block scripts
