--- a/dev/pug/layout__part_nav.pug
+++ b/dev/pug/layout__part_nav.pug
@@ -9,4 +9,4 @@
 				.sidenav__links
 					a.sidenav__link(href='tel:88432788654') +7 843 278 86 54
 					a.sidenav__link(href='tel:89673683323') +7 967 36 83 323
-			a.sidenav__button.button(href='#') Написать нам
+			a.sidenav__button.button.js-menu-trigger.js-popup(href='#popup-call') Написать нам
