+ devices favicons ~ image paths fix

--- a/dev/blocks/popup/popup.pug
+++ b/dev/blocks/popup/popup.pug
@@ -57,7 +57,7 @@ mixin popup-price()
 			.popup__descr Вы можете заказать звонок на Ваш телефон через данную форму. Укажите в соответствующих полях Ваши контактные данные и наш сотрудник перезвонит Вам.
 			.popup__product
 				.popup__product-img
-					img(src='/assets/popup-good.png' alt='')
+					img(src='/img/popup-good.png' alt='')
 				.popup__product-inner
 					.popup__product-title БМВЛ для телят АСТ/105
 					.popup__product-descr витаминно-минеральный коктейль для добавления в цельное молоко
