--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -82,11 +82,11 @@ block pageMain
 					.slider-wrap
 						.slider.slider_company
 							.slider__slide
-								img(src='/assets/img__slide_01.jpg', alt='')
+								img(src='/img/img__slide_01.jpg', alt='')
 							.slider__slide
-								img(src='/assets/img__slide_02.jpg', alt='')
+								img(src='/img/img__slide_02.jpg', alt='')
 							.slider__slide
-								img(src='/assets/img__slide_03.jpg', alt='')
+								img(src='/img/img__slide_03.jpg', alt='')
 				.grid__col.grid__col_lg_5
 					.slider-side
 						h2.page__title.page__title_1 О компании
