--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -20,7 +20,7 @@ block pageMain
 				.prod
 					.prod__inner
 						.prod__img
-							img(src='/assets/product-full.png' alt='')
+							img(src='/img/product-full.png' alt='')
 						.prod__info
 							+back()
 							h2.page__title.prod__title БМВЛ для телят АСТ/105
